# ML-For-Beginners

./: main.py  pyproject.toml
2-Regression/1-Tools/: notebook.ipynb
