[tool.poetry]
name = "ml-for-beginners"
version = "0.1.0"
description = ""
authors = ["pavittarx <29155477+pavittarx@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.10.3"
scikit-learn = "^1.7.1"
numpy = "^2.3.1"
pandas = "^2.3.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
